--- a/evaluation/requirements.txt
+++ b/evaluation/requirements.txt
@@ -1,203 +1,157 @@
-anyio==3.7.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
+accelerate==1.10.1
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.10.0
 asttokens==3.0.0
 async-timeout==5.0.1
 attrs==25.3.0
-awscli==1.40.3
-babel==2.17.0
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-blinker==1.4
-boto3==1.38.4
-botocore==1.38.4
-bottle==0.13.3
-brainpp==2.6.23
+av==15.0.0
+Brotli==1.1.0
 cachetools==5.5.2
-certifi==2020.6.20
-cffi==1.17.1
-chardet==4.0.0
-charset-normalizer==3.4.1
-click==8.1.8
-cloud-init==24.4.1
-colorama==0.4.4
-comm==0.2.2
-configobj==5.0.6
-confluent-kafka==2.10.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.2
 contourpy==1.3.2
-cryptography==3.4.8
 cycler==0.12.1
-Cython==0.29.28
-dbus-python==1.2.18
-debugpy==1.8.14
+datasets==4.1.0
 decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
+decord==0.6.0
 dill==0.4.0
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docutils==0.19
-dotmap==1.3.30
-durationpy==0.9
+distro==1.9.0
+dotenv==0.9.9
 einops==0.8.1
-elasticsearch==7.17.12
-exceptiongroup==1.2.2
+et_xmlfile==2.0.0
+exceptiongroup==1.3.0
 executing==2.2.0
-fastjsonschema==2.21.1
+fastapi==0.116.1
+ffmpy==0.6.1
 filelock==3.19.1
-flash_attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.2cxx11abiFALSE-cp310-cp310-linux_x86_64.whl#sha256=1776769f7ae3a8be3b31ec3a4c875ad1764da74be2d9b1751e5c01162ad0096f
-Flask==2.2.5
-fonttools==4.57.0
-frozendict==1.2
+fonttools==4.59.2
+frozenlist==1.7.0
 fsspec==2025.7.0
-future==0.18.2
-gitignore-parser==0.1.12
-google-auth==2.39.0
-graphviz==0.20.3
-h5py==3.13.0
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-influxdb==5.3.2
-ipykernel==6.29.5
-ipython==8.36.0
-ipython-genutils==0.2.0
-itsdangerous==2.2.0
+google-auth==2.40.3
+google-genai==1.32.0
+gradio==5.44.0
+gradio_client==1.12.1
+groovy==0.1.2
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.34.0
+idna==3.10
+imageio==2.37.0
+ipdb==0.13.13
+ipython==8.37.0
 jedi==0.19.2
-jeepney==0.7.1
-Jinja2==3.0.3
-jmespath==0.10.0
-joblib==1.4.2
-json5==0.12.0
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter-server==1.24.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab==3.3.2
-jupyterlab-drawio==0.9.0
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-keyring==23.5.0
-kiwisolver==1.4.8
-kubernetes==32.0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lmdb==1.6.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.2
+json_repair==0.50.0
+kiwisolver==1.4.9
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.1
+matplotlib==3.10.5
 matplotlib-inline==0.1.7
-megfile==2.2.10.post1
-mistune==3.1.3
-more-itertools==8.10.0
+mdurl==0.1.2
 mpmath==1.3.0
-msgpack==1.1.0
-nbclassic==0.5.6
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-netifaces==0.11.0
+multidict==6.6.4
+multiprocess==0.70.16
 networkx==3.4.2
-notebook_shim==0.2.4
-numpy==1.24.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-ml-py3==7.352.0
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.9.86
-nvidia-nvtx-cu12==12.1.105
-oauthlib==3.2.2
-olefile==0.46
-opencv-python==4.11.0.86
+nltk==3.9.1
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+omegaconf==2.3.0
+openai==1.102.0
+opencv-python==4.12.0.88
+openpyxl==3.1.5
+orjson==3.11.3
 packaging==25.0
-pandas==2.2.3
-pandocfilters==1.5.1
-paramiko==3.5.1
-parso==0.8.4
+pandas==2.3.2
+parso==0.8.5
 pexpect==4.9.0
-Pillow==9.0.1
-platformdirs==4.3.7
-prometheus_client==0.21.1
-prompt_toolkit==3.0.51
+pillow==11.3.0
+portalocker==3.2.0
+prompt_toolkit==3.0.52
+propcache==0.3.2
+protobuf==6.32.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-py==1.11.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pycparser==2.22
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-PyNaCl==1.5.0
-PyOpenGL==3.1.9
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyserial==3.5
-python-apt==2.4.0+ubuntu4
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-python-distutils-extra==2.39
-pytz==2022.1
-PyYAML==5.4.1
-pyzmq==26.4.0
-redis==5.2.1
-referencing==0.36.2
-refile==7.2.7.post3
-requests==2.32.3
-requests-futures==1.0.0
-requests-oauthlib==2.0.0
-retry==0.9.2
-roman==3.3
-rpds-py==0.24.0
-rsa==4.7.2
-s3transfer==0.12.0
-scikit-learn==1.6.1
-scipy==1.15.2
-seaborn==0.13.2
-SecretStorage==3.3.1
-Send2Trash==1.8.3
-setproctitle==1.3.5
-shapely==2.1.0
-six==1.16.0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+qwen-vl-utils==0.0.11
+regex==2025.7.34
+requests==2.32.5
+rich==14.1.0
+rsa==4.9.1
+ruff==0.12.10
+safehttpx==0.1.6
+safetensors==0.6.2
+semantic-version==2.10.0
+sentencepiece==0.2.1
+shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
-soupsieve==2.7
-ssh-import-id==5.11
 stack-data==0.6.3
+starlette==0.47.3
+sty==1.0.6
 sympy==1.14.0
 tabulate==0.9.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-torch==2.2.0+cu121
-torchaudio==2.2.0+cu121
-torchvision==0.17.0+cu121
-tornado==6.4.2
+tenacity==9.1.2
+tiktoken==0.11.0
+timeout-decorator==0.5.0
+timm==1.0.19
+tokenizers==0.21.4
+tomli==2.2.1
+tomlkit==0.13.3
+torch==2.8.0
+torchvision==0.23.0
 tqdm==4.67.1
 traitlets==5.14.3
-triton==2.2.0
-typeguard==4.4.2
-typing_extensions==4.13.2
+transformers==4.55.4
+triton==3.4.0
+typer==0.16.1
+typer-slim==0.20.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
 tzdata==2025.2
-unattended-upgrades==0.1
-urllib3==1.26.5
-wadllib==1.3.6
-waitress==3.0.2
-watchdog==2.1.6
+urllib3==2.5.0
+uvicorn==0.35.0
+validators==0.35.0
 wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wrapt==1.17.2
-zipp==1.0.0
+websockets==15.0.1
+xlsxwriter==3.2.5
+xxhash==3.5.0
+yarl==1.20.1
+
+#You can try adding this if you encounter any problem
+#-e git+https://github.com/open-compass/VLMEvalKit.git@bf14378a41d6a641450b79880a382210bfffe4ee#egg=vlmeval #
